# state-machine-engine

./: CMakeLists.txt  README.md  example.c  example_cfg.h  smengine.c  smengine.h
